Created a new task to attack the target when we have one.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.05-22.25.20
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.05.08-18.51.47
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -4223,14 +4223,10 @@ Character.Character=True
 Character.Materials=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
-OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
-OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
 OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
-OpenAssetsAtExit=/Game/AdvancedAI/Service_SelectATargetActor.Service_SelectATargetActor
-OpenAssetsAtExit=/Game/AdvancedAI/EQS_NearestPlayer.EQS_NearestPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4603,26 +4599,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem1=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
-MRUItem2=/Game/weaponEffects/ShellEject/SM_ShellEject
-MRUItem3=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem4=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem5=/Game/AdvancedAI/BT_AIPlayer
-MRUItem6=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem7=/Game/AdvancedAI/EQS_FindTarget
-MRUItem8=/Game/Level/maps/VoidMap
-MRUItem9=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem10=/Game/AdvancedAI/BP_AIPlayer
-MRUItem11=/Game/AdvancedAI/BB_AIPlayer
-MRUItem12=/Game/Level/maps/TestMap
-MRUItem13=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem14=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem15=/Game/AdvancedAI/EQS_Trash
-MRUItem16=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem18=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem19=/Game/AdvancedAI/BP_AI
+MRUItem0=/Game/AdvancedAI/Task_AttackTarget
+MRUItem1=/Game/AdvancedAI/BT_AIPlayer
+MRUItem2=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem3=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem4=/Game/weaponEffects/ShellEject/SM_ShellEject
+MRUItem5=/Game/AdvancedAI/EQS_NearestPlayer
+MRUItem6=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem7=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem8=/Game/AdvancedAI/EQS_FindTarget
+MRUItem9=/Game/Level/maps/VoidMap
+MRUItem10=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem11=/Game/AdvancedAI/BP_AIPlayer
+MRUItem12=/Game/AdvancedAI/BB_AIPlayer
+MRUItem13=/Game/Level/maps/TestMap
+MRUItem14=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem15=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem16=/Game/AdvancedAI/EQS_Trash
+MRUItem17=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem18=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem19=/Game/AdvancedAI/EQS_CoverFindign
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
