Task now aborts if the one that executes it isn't a SCharacter.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4221,6 +4221,8 @@ Character.Shape=True
 Character.Navigation=True
 Character.Character=True
 Character.Materials=True
+Task_AttackTarget_C.Description=True
+Task_AttackTarget_C.Task=True
 
 [AssetEditorManager]
 CleanShutdown=False
