When moving the check if it had a target to the upper node, the abort the lower priority nodes was reset.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4242,6 +4242,7 @@ OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/Task_AttackTarget.Task_AttackTarget
 OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/Service_SelectATargetActor.Service_SelectATargetActor
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4615,14 +4616,14 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/BP_AIPlayer
-MRUItem1=/Game/AdvancedAI/Task_AttackTarget
-MRUItem2=/Game/AdvancedAI/BT_AIPlayer
-MRUItem3=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem4=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
-MRUItem5=/Game/weaponEffects/ShellEject/SM_ShellEject
-MRUItem6=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem7=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem0=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem1=/Game/AdvancedAI/BP_AIPlayer
+MRUItem2=/Game/AdvancedAI/Task_AttackTarget
+MRUItem3=/Game/AdvancedAI/BT_AIPlayer
+MRUItem4=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem5=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem6=/Game/weaponEffects/ShellEject/SM_ShellEject
+MRUItem7=/Game/AdvancedAI/EQS_NearestPlayer
 MRUItem8=/Game/AdvancedAI/Decorator_DistanceTo
 MRUItem9=/Game/AdvancedAI/EQS_FindTarget
 MRUItem10=/Game/Level/maps/VoidMap
