Now Single trace weapons have a bullet spread effect.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.08-18.51.47
+CoopGame.TimeStamp=2020.05.08-19.55.34
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4238,11 +4238,6 @@ BTService_DefaultFocus.Description=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
-OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
-OpenAssetsAtExit=/Game/AdvancedAI/Task_AttackTarget.Task_AttackTarget
-OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
-OpenAssetsAtExit=/Game/AdvancedAI/Service_SelectATargetActor.Service_SelectATargetActor
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4275,7 +4270,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/weaponEffects
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4616,26 +4611,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem1=/Game/AdvancedAI/BP_AIPlayer
-MRUItem2=/Game/AdvancedAI/Task_AttackTarget
-MRUItem3=/Game/AdvancedAI/BT_AIPlayer
-MRUItem4=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem5=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
-MRUItem6=/Game/weaponEffects/ShellEject/SM_ShellEject
-MRUItem7=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem8=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem9=/Game/AdvancedAI/EQS_FindTarget
-MRUItem10=/Game/Level/maps/VoidMap
-MRUItem11=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem12=/Game/AdvancedAI/BB_AIPlayer
-MRUItem13=/Game/Level/maps/TestMap
-MRUItem14=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem15=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem16=/Game/AdvancedAI/EQS_Trash
-MRUItem17=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem18=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem19=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem0=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem1=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem2=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem3=/Game/AdvancedAI/BP_AIPlayer
+MRUItem4=/Game/AdvancedAI/Task_AttackTarget
+MRUItem5=/Game/AdvancedAI/BT_AIPlayer
+MRUItem6=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem7=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem8=/Game/weaponEffects/ShellEject/SM_ShellEject
+MRUItem9=/Game/AdvancedAI/EQS_NearestPlayer
+MRUItem10=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem11=/Game/AdvancedAI/EQS_FindTarget
+MRUItem12=/Game/Level/maps/VoidMap
+MRUItem13=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem14=/Game/AdvancedAI/BB_AIPlayer
+MRUItem15=/Game/Level/maps/TestMap
+MRUItem16=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem17=/Game/AdvancedAI/EQS_Trash
+MRUItem18=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem19=/Game/Blueprints/Characters/BP_PlayerPawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4725,6 +4720,7 @@ MRUItem19=/Game/AdvancedAI/EQS_CoverFindign
 /Game/weaponEffects/ShellEject/SM_ShellEject.SM_ShellEject=0
 /Game/weaponEffects/ShellEject/P_Rifle_ShellEject.P_Rifle_ShellEject=0
 /Game/weaponEffects/ShellEject/M_ShellEjectMetal.M_ShellEjectMetal=0
+/Game/Blueprints/Weapons/BP_Shotgun.BP_Shotgun=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
