Now AI has a machine gun with worse bullet spread.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4234,10 +4234,40 @@ REINST_BP_AIPlayer_C_62.Input=True
 REINST_BP_AIPlayer_C_62.Actor=True
 BTService_DefaultFocus.Blackboard=True
 BTService_DefaultFocus.Description=True
+BP_AIMachineGun_C.TransformCommon=True
+BP_AIMachineGun_C.Animation=True
+BP_AIMachineGun_C.Mesh=True
+BP_AIMachineGun_C.Materials=True
+BP_AIMachineGun_C.Weapon=True
+BP_AIMachineGun_C.Tick=True
+BP_AIMachineGun_C.ComponentTick=True
+BP_AIMachineGun_C.Clothing=True
+BP_AIMachineGun_C.Physics=True
+BP_AIMachineGun_C.Collision=True
+BP_AIMachineGun_C.MasterPoseComponent=True
+BP_AIMachineGun_C.Lighting=True
+BP_AIMachineGun_C.ClothingSimulation=True
+BP_AIMachineGun_C.Rendering=True
+BP_AIMachineGun_C.Tags=True
+BP_AIMachineGun_C.ComponentReplication=True
+BP_AIMachineGun_C.Activation=True
+BP_AIMachineGun_C.Variable=True
+BP_AIMachineGun_C.Cooking=True
+BP_AIMachineGun_C.Replication=True
+BP_AIMachineGun_C.Input=True
+BP_AIMachineGun_C.Actor=True
+REINST_BP_AIMachineGun_C_61.Tick=True
+REINST_BP_AIMachineGun_C_61.Weapon=True
+REINST_BP_AIMachineGun_C_61.Rendering=True
+REINST_BP_AIMachineGun_C_61.Replication=True
+REINST_BP_AIMachineGun_C_61.Input=True
+REINST_BP_AIMachineGun_C_61.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/AdvancedAI/BP_AIMachineGun.BP_AIMachineGun
+OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4611,26 +4641,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem1=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem2=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem3=/Game/AdvancedAI/BP_AIPlayer
-MRUItem4=/Game/AdvancedAI/Task_AttackTarget
-MRUItem5=/Game/AdvancedAI/BT_AIPlayer
-MRUItem6=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem7=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
-MRUItem8=/Game/weaponEffects/ShellEject/SM_ShellEject
-MRUItem9=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem10=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem11=/Game/AdvancedAI/EQS_FindTarget
-MRUItem12=/Game/Level/maps/VoidMap
-MRUItem13=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem14=/Game/AdvancedAI/BB_AIPlayer
-MRUItem15=/Game/Level/maps/TestMap
-MRUItem16=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem17=/Game/AdvancedAI/EQS_Trash
-MRUItem18=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem19=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem0=/Game/AdvancedAI/BP_AIPlayer
+MRUItem1=/Game/Blueprints/Weapons/BP_AIMachineGun
+MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem4=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem5=/Game/AdvancedAI/Task_AttackTarget
+MRUItem6=/Game/AdvancedAI/BT_AIPlayer
+MRUItem7=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem8=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem9=/Game/weaponEffects/ShellEject/SM_ShellEject
+MRUItem10=/Game/AdvancedAI/EQS_NearestPlayer
+MRUItem11=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem12=/Game/AdvancedAI/EQS_FindTarget
+MRUItem13=/Game/Level/maps/VoidMap
+MRUItem14=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem15=/Game/AdvancedAI/BB_AIPlayer
+MRUItem16=/Game/Level/maps/TestMap
+MRUItem17=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem18=/Game/AdvancedAI/EQS_Trash
+MRUItem19=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
