Changed the Game Mode to spawn AIPlayers on occasion.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4275,6 +4275,8 @@ REINST_BP_AIPlayer_C_65.Actor=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4649,26 +4651,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem1=/Game/AdvancedAI/BP_AIPlayer
-MRUItem2=/Game/Blueprints/Weapons/BP_AIMachineGun
-MRUItem3=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem4=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem5=/Game/AdvancedAI/Task_AttackTarget
-MRUItem6=/Game/AdvancedAI/BT_AIPlayer
-MRUItem7=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem8=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
-MRUItem9=/Game/weaponEffects/ShellEject/SM_ShellEject
-MRUItem10=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem11=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem12=/Game/AdvancedAI/EQS_FindTarget
-MRUItem13=/Game/Level/maps/VoidMap
-MRUItem14=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem15=/Game/AdvancedAI/BB_AIPlayer
-MRUItem16=/Game/Level/maps/TestMap
-MRUItem17=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem18=/Game/AdvancedAI/EQS_Trash
-MRUItem19=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem0=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem1=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem3=/Game/AdvancedAI/BP_AIPlayer
+MRUItem4=/Game/Blueprints/Weapons/BP_AIMachineGun
+MRUItem5=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem6=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem7=/Game/AdvancedAI/Task_AttackTarget
+MRUItem8=/Game/AdvancedAI/BT_AIPlayer
+MRUItem9=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem10=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem11=/Game/weaponEffects/ShellEject/SM_ShellEject
+MRUItem12=/Game/AdvancedAI/EQS_NearestPlayer
+MRUItem13=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem14=/Game/AdvancedAI/EQS_FindTarget
+MRUItem15=/Game/Level/maps/VoidMap
+MRUItem16=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem17=/Game/AdvancedAI/BB_AIPlayer
+MRUItem18=/Game/Level/maps/TestMap
+MRUItem19=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
